--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
         <!-- El elemento div con la clase conteiner agrupa los elementos relacionados con la entrada de texto -->
         <div class="conteiner">
 
-            <!-- El elemento div con la clase encriptar contiene un área de texto donde el usuario puede ingresar el texto a encriptar o desencriptar -->
-            <div class="encriptar">
-                <label for="text"></label>
-                <input id="text" name="text" class="ingreseText" type="text" placeholder="Ingrese el texto aquí:" />
+            <!-- El elemento div contiene un área de texto donde el usuario puede ingresar el texto a encriptar o desencriptar -->
+            <div class="text-ingresar">
+
+                <label for="text-ingresar">Ingrese el texto aquí:</label>
+                <br>
+                <br>
+                <textarea name="ingresar" id="text-ingresar" cols="70" rows="10"></textarea>
+
             </div>
 
             <div class="terminos">
@@ -35,8 +39,8 @@
         </div>
         
         <!-- El elemento div con la clase encriptado agrupa los elementos relacionados con la salida de texto -->
-        <div class="encriptado">
-            <img src="img/muñeco.png" class="muñeco" alt="Muñeco">
+        <div class="muñeco">
+            <img src="img/muñeco.png" class="img-niño" alt="Muñeco">
              <!-- El elemento h2 define un título de nivel 2 -->
             <h2 class="title-mensaje">Ningún mensaje fue encontrado</h2>
             <label for="text"></label>
