iniciando con javascript

--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
             <!-- El elemento div contiene un área de texto donde el usuario puede ingresar el texto a encriptar o desencriptar -->
             <div class="text-ingresar">
 
-                <label for="text-ingresar">Ingrese el texto aquí:</label>
-                <br>
-                <br>
-                <textarea name="ingresar" id="text-ingresar" cols="70" rows="10"></textarea>
-
+                <label for="textoIngresar">Ingrese el texto aquí:</label>
+                <textarea name="ingresar" cols="70" rows="10" id="textoIngresar"></textarea>
             </div>
 
             <div class="terminos">
