--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <a href="https://app.aluracursos.com/"><img src="img/Logo.png" class="logo"></a>
+        <a href="https://app.aluracursos.com/"><img src="img/Logo.png" alt="Logo-Alura" class="logo"></a>
     </header>
 
     <main>
         <!-- El elemento div con la clase conteiner agrupa los elementos relacionados con la entrada de texto -->
-        <div class="conteiner">
+        <fieldset class="conteiner">
 
             <!-- El elemento div contiene un área de texto donde el usuario puede ingresar el texto a encriptar o desencriptar -->
             <div class="text-ingresar">
@@ -33,17 +33,25 @@
                 <button class="btn-encriptador" type="button" onclick="encriptar()">Encriptar</button>
                 <button class="btn-desencriptar" type="button" onclick="desencriptar()">Desencriptar</button>
             </div>
-        </div>
+        </fieldset>
         
         <!-- El elemento div con la clase encriptado agrupa los elementos relacionados con la salida de texto -->
-        <div class="muñeco">
+        <fieldset class="muñeco">
+
             <img src="img/muñeco.png" class="img-niño" alt="Muñeco">
              <!-- El elemento h2 define un título de nivel 2 -->
             <h2 class="title-mensaje">Ningún mensaje fue encontrado</h2>
             <label for="text"></label>
             <input id="text" name="text" class="e-d-text" type="text" placeholder="Ingresa el texto que desees encriptar o desencriptar." />
-        </div>
+
+        </fieldset>
+
     </main>
+
+    <footer>
+        <a href="https://www.linkedin.com/in/ana-virginia-castello/"><img src="img/linkedin.png" alt="Logo linkedin"></a>
+        <legend>&copy; Proyecto encriptar de Ana Castello - Alura</legend>
+    </footer>
 
     <script src="app.js"></script>
 </body>
