--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
 
     <main>
         <!-- El elemento div con la clase conteiner agrupa los elementos relacionados con la entrada de texto -->
-        <fieldset class="conteiner">
+        <div class="conteiner">
 
             <!-- El elemento div contiene un área de texto donde el usuario puede ingresar el texto a encriptar o desencriptar -->
             <div class="text-ingresar">
-
-                <label for="textoIngresar">Ingrese el texto aquí:</label>
+                <label for="ingresarDesEncriptado">Ingrese el texto aquí:</label>
                 <textarea name="ingresar" cols="70" rows="25" id="ingresarDesEncriptado"></textarea>
             </div>
 
@@ -34,21 +33,18 @@
                 <!-- El atributo onclick define la función de JavaScript que se ejecuta al presionar el botón -->
                 <button class="btn-encriptador" type="button" onclick="encriptar()">Encriptar</button>
                 <button class="btn-desencriptar" type="button" onclick="desencriptar()">Desencriptar</button>
+                <button type="button" id="copiar">Copiar</button>
             </div>
-        </fieldset>
+        </div>
 
         <!-- El elemento div con la clase encriptado agrupa los elementos relacionados con la salida de texto -->
-        <fieldset  id="muñeco">
-
+        <div id="muñeco">
             <img src="img/muñeco.png" class="img-niño" alt="Muñeco">
             <!-- El elemento h2 define un título de nivel 2 -->
             <h2 class="title-mensaje">Ningún mensaje fue encontrado</h2>
             <label for="ingresarDesencriptado"></label>
-            <input id="ingresarEncripar-Desencriptado" name="text" class="e-d-text" type="text"
-                placeholder="Ingresa el texto que desees encriptar o desencriptar." />
-            
-            <button type="button" id="copiar">Copiar</button>
-        </fieldset>
+            <p>Ingresa el texto que desees encriptar o desencriptar.</p>
+        </div>
 
     </main>
 
