--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>        
         <section class="box-ingresar">
 
-            <textarea name="ingresar" cols="40" rows="10" id="ingresarDesEncriptado">Ingrese el texto aquí:</textarea>
+            <textarea  class="ingresar" cols="40" rows="10" id="ingresarDesEncriptado">Ingrese el texto aquí:</textarea>
 
             <div class="terminosCondiciones">
                 <h6><img src="img/t&c.png" alt="Términos y condiciones"> Solo letras minúsculas y sin acentos</h6>
@@ -36,10 +36,10 @@
         </section>
 
         
-        <section class="box-mensaje">
-            <textarea class="mesaje" cols="20" rows="10"></textarea>
-            <div class="copiar">
-                <button type="button" id="copiar">Copiar</button>
+        <section>
+            <textarea class="mensaje" cols="50" rows="35"></textarea>
+            <div >
+                <button class="copiar" type="button" id="copiar">Copiar</button>
             </div>
             
         </section>
