--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 
         
         <section class="chico">
-            <div id="muñeco">
-                <img src="img/muñeco.png" alt="chico">
+            <div id="muñeco">            
+                <img src="img/muñeco.png" alt="chico" id="img">
                 <textarea id="mensaje" cols="35" rows="10" placeholder="Ingresa el texto que desees encriptar o desencriptar."></textarea>
+
             </div>
+
 
             
             <div>
